--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@
 #spring.jpa.properties.hibernate.jdbc.lob_non_contextual_creation=true
 
 #app.version=1.0.0
-logging.level.com.snehaapte.practice.springstarterproject=DEBUG
+logging.level.com.snehaapte.cricketmanager=DEBUG
 
